# Qviewer

./: .gitignore  README.md  main.py  main1.py  pyproject.toml  qvw.drawio  test.py
.github/workflows/: desktop-and-mobile-builds.yml  web-build-and-github-pages-deploy.yml  web-build-and-netlify-deploy.yml
assets/: index.html  manifest.json
core/: config.py  controls.py  load.py  methods.py  read.py  read_db.py
views/: blank.py  home.py  set.py  welcome.py
views/import_wiz/: choose.py  db_config.py  import_file.py  import_web.py
views/viewer/: group.py
