[project]
name = "Qviewer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = "GNU Lesser General Public License v3.0 (LGPL-3.0)"
dependencies = ["flet>=0.26.0", "flet-easy>=0.2.0","aiofiles>=0.7.0"]

[[project.authors]]
name = "Tim"

[tool.flet]
org = "tim"
product = "Qviewer"
company = "Tim"
copyright = "Copyright (C) 2025 by Tim"
build_number = "1"

[tool.flet.app.boot_screen]
show = true
message = "首次启动时需要进行一些调整，请稍候..."

[tool.flet.app.startup_screen]
show = true
message = "Qviewer 正在启动..."

[tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
key_store = "html5syt.jks" # --android-signing-key-store
key_alias = "html5syt"

[tool.flet.android]
split_per_abi = true